--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,6 +7,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  margin-top: 81.31px;
+}
+
 :root {
   --color-dark: #242525;
   --color-light-dark: #3c3d3d;
